[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprtg-api"
version = "0.0.16"
authors = [
    {name="Jonny Le", email="jonny.le@computacenter.com"},
]
description = "Client API to communicate with PRTG instance."
dependencies = [
    "requests",
    "tenacity"
]
readme = "README.md"
license = {text="MIT"}
classifiers = [
    "Programming Language :: Python :: 3"
]